fixing overflow

--- a/src/Component/Test/Test.css
+++ b/src/Component/Test/Test.css
@@ -64,6 +64,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        overflow: hidden;
     }
 
     .image-news-c{
